force-app/zurich-base/main/default/objects/Survey__c/fields/ANI__c.field-meta.xml
<CustomField>
    <fullName>ANI__c</fullName>
    <description>fromId</description>
    <label>ANI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>