force-app/zurich-base/main/default/objects/Survey__c/fields/CallOriginQueueId__c.field-meta.xml
<CustomField>
    <fullName>CallOriginQueueId__c</fullName>
    <description>OCS - Identificador de la cola por la que entró la llamada en Genesys</description>
    <label>Call Origin Queue Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>