force-app/zurich-base/main/default/objects/Survey__c/fields/CanBeRemoved__c.field-meta.xml
<CustomField>
    <fullName>CanBeRemoved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OCS - Marcado a true cuando un usuario determine que se ha realizado la export a Medalia.
Por defecto, false.</description>
    <label>Can Be Removed?</label>
    <type>Checkbox</type>
</CustomField>