force-app/zurich-base/main/default/objects/Survey__c/fields/CaseId__c.field-meta.xml
<CustomField>
    <fullName>CaseId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Se obtiene del Task.WhatId si está relacionado con un caso</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>