force-app/zurich-base/main/default/objects/Survey__c/fields/CDTIPDTF__c.field-meta.xml
<CustomField>
    <fullName>CDTIPDTF__c</fullName>
    <formula>CASE
( GenesysCloudQueue__r.CallCenter__c , &apos;Motor Express&apos;, &apos;2&apos;, 
                                       &apos;CC Service&apos;, &apos;1&apos;,
                                       &apos;Property Express&apos;, &apos;4&apos;,
                                       &apos;Me Catalán&apos;, &apos;3&apos;,
                                       &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CDTIPDTF</label>
    <type>Text</type>
</CustomField>