force-app/zurich-base/main/default/objects/Survey__c/fields/CDUSUARI__c.field-meta.xml
<CustomField>
    <fullName>CDUSUARI__c</fullName>
    <description>Identificador del gestor (email gestor)</description>
    <label>CDUSUARI</label>
    <type>Email</type>
</CustomField>