force-app/zurich-base/main/default/objects/Survey__c/fields/ClaimNumber__c.field-meta.xml
<CustomField>
    <fullName>ClaimNumber__c</fullName>
    <description>Número de siniestro</description>
    <label>Claim Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>