force-app/zurich-base/main/default/objects/Survey__c/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <description>OCS. Para Medallia. Tipo de cliente</description>
    <formula>CASE(CaseId__r.PolicyId__r.CommercialStructureCode__c, 
&apos;6100&apos;, &apos;Small Business&apos;, 
&apos;6200&apos;, &apos;Small Business&apos;,
&apos;6250&apos;, &apos;Small Business&apos;,
&apos;Individual&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer_Type</label>
    <type>Text</type>
</CustomField>