force-app/zurich-base/main/default/objects/Survey__c/fields/CustomerNif__c.field-meta.xml
<CustomField>
    <fullName>CustomerNif__c</fullName>
    <description>DNI del cliente</description>
    <label>Customer NIF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>