force-app/zurich-base/main/default/objects/Survey__c/fields/DSMEDCON__c.field-meta.xml
<CustomField>
    <fullName>DSMEDCON__c</fullName>
    <formula>IF( Solicitud__c = true,&quot;email&quot;,&quot;teléfono&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DSMEDCON</label>
    <type>Text</type>
</CustomField>