force-app/zurich-base/main/default/objects/Survey__c/fields/DSOBSER__c.field-meta.xml
<CustomField>
    <fullName>DSOBSER__c</fullName>
    <description>Observaciones recogidas en la interacción.</description>
    <label>DSOBSER</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>