force-app/zurich-base/main/default/objects/Survey__c/fields/DSPERCON__c.field-meta.xml
<CustomField>
    <fullName>DSPERCON__c</fullName>
    <description>OCS. Identifica cliente con NIF o CIF. Resto de casos OTROS.</description>
    <formula>CASE(NumeroIdCliente__r.NationalIdType__c, 
&quot;N&quot;, &quot;Cliente con NIF&quot;, 
&quot;C&quot;, &quot;Cliente con CIF&quot;,
&quot;Otros&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DSPERCON</label>
    <type>Text</type>
</CustomField>