force-app/zurich-base/main/default/objects/Survey__c/fields/DSPOINT__c.field-meta.xml
<CustomField>
    <fullName>DSPOINT__c</fullName>
    <defaultValue>&quot;Operaciones&quot;</defaultValue>
    <description>OCS. Para Medallia. Campo fijo Operaciones</description>
    <label>DSPOINT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>