force-app/zurich-base/main/default/objects/Survey__c/fields/DSRESULT__c.field-meta.xml
<CustomField>
    <fullName>DSRESULT__c</fullName>
    <description>Estado del caso en el momento de la llamada</description>
    <label>DSRESULT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>