force-app/zurich-base/main/default/objects/Survey__c/fields/FECHACTO__c.field-meta.xml
<CustomField>
    <fullName>FECHACTO__c</fullName>
    <formula>TEXT(YEAR(DATEVALUE(CreatedDate + (1/24)))) +
LPAD(TEXT(MONTH(DATEVALUE(CreatedDate + (1/24)))), 2, &quot;0&quot;) +
LPAD(TEXT(DAY(DATEVALUE(CreatedDate + (1/24)))), 2, &quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FECHACTO</label>
    <type>Text</type>
</CustomField>