force-app/zurich-base/main/default/objects/Survey__c/fields/FENACCON__c.field-meta.xml
<CustomField>
    <fullName>FENACCON__c</fullName>
    <formula>IF(  NOT(ISBLANK( CaseId__r.Account.Birthdate__c ))  , 
  TEXT(YEAR(CaseId__r.Account.Birthdate__c)) +
    IF( LEN(TEXT(MONTH(CaseId__r.Account.Birthdate__c))) &gt; 1 , TEXT(MONTH(CaseId__r.Account.Birthdate__c)), &quot;0&quot; + TEXT(MONTH(CaseId__r.Account.Birthdate__c))) +
    IF(LEN(TEXT(DAY(CaseId__r.Account.Birthdate__c))) &gt; 1 , TEXT(DAY(CaseId__r.Account.Birthdate__c)), &quot;0&quot; + TEXT(DAY(CaseId__r.Account.Birthdate__c))), 
IF(   NOT(ISBLANK( NumeroIdCliente__r.Birthdate__c ))   , 
  TEXT(YEAR(NumeroIdCliente__r.Birthdate__c )) +
    IF( LEN(TEXT(MONTH(NumeroIdCliente__r.Birthdate__c ))) &gt; 1 , TEXT(MONTH(NumeroIdCliente__r.Birthdate__c )), &quot;0&quot; + TEXT(MONTH(NumeroIdCliente__r.Birthdate__c ))) +
    IF(LEN(TEXT(DAY(NumeroIdCliente__r.Birthdate__c ))) &gt; 1 , TEXT(DAY(NumeroIdCliente__r.Birthdate__c )), &quot;0&quot; + TEXT(DAY(NumeroIdCliente__r.Birthdate__c ))), 
  &apos;&apos;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FENACCON</label>
    <type>Text</type>
</CustomField>