force-app/zurich-base/main/default/objects/Survey__c/fields/GenesysCloudQueue__c.field-meta.xml
<CustomField>
    <fullName>GenesysCloudQueue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Genesys_Cloud_Queue</label>
    <referenceTo>purecloud__PureCloud_Queue__c</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>