force-app/zurich-base/main/default/objects/Survey__c/fields/Insurance_Type__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Type__c</fullName>
    <description>OCS. Para Medallia. Entidad legal</description>
    <formula>CASE(CaseId__r.PolicyId__r.LegalEntity__c, 
&apos;001&apos;, &apos;P&amp;C&apos;, 
&apos;Life&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance_Type</label>
    <type>Text</type>
</CustomField>