force-app/zurich-base/main/default/objects/Survey__c/fields/InteractionId__c.field-meta.xml
<CustomField>
    <fullName>InteractionId__c</fullName>
    <description>Coincide con el valor de Task.CallObject</description>
    <externalId>true</externalId>
    <label>Interaction Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>