force-app/zurich-base/main/default/objects/Survey__c/fields/JOURNEY_NAME__c.field-meta.xml
<CustomField>
    <fullName>JOURNEY_NAME__c</fullName>
    <defaultValue>&apos;Helpdesk&apos;</defaultValue>
    <description>OCS. Para Medallia. Valor fijo Helpdesk</description>
    <label>JOURNEY_NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>