force-app/zurich-base/main/default/objects/Survey__c/fields/LongAnswerProcessed__c.field-meta.xml
<CustomField>
    <fullName>LongAnswerProcessed__c</fullName>
    <description>OCS - Solo debe indicarse la de tipo asr.</description>
    <label>Long Answer Processed</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>