force-app/zurich-base/main/default/objects/Survey__c/fields/NOPOBL__c.field-meta.xml
<CustomField>
    <fullName>NOPOBL__c</fullName>
    <description>Población Cliente</description>
    <label>NOPOBL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>