force-app/zurich-base/main/default/objects/Survey__c/fields/NOPROVIN__c.field-meta.xml
<CustomField>
    <fullName>NOPROVIN__c</fullName>
    <description>Provincia Cliente</description>
    <label>NOPROVIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>