force-app/zurich-base/main/default/objects/Survey__c/fields/NumberOfQuestions__c.field-meta.xml
<CustomField>
    <fullName>NumberOfQuestions__c</fullName>
    <defaultValue>1</defaultValue>
    <description>OCS - Número de preguntas que contiene la encuesta y que se utiliza para el procesado de la información antes de enviar a Medalia. Número de preguntas de tipo “ivr” que contiene la encuesta. Necesario para procesamiento de datos en Salesforce. Ejemplo, si tenemos 6 preguntas en total y una de ellas es de tipo “asr” entonces en este parámetro se indicará 5.</description>
    <label>Number Of Questions</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>