force-app/zurich-base/main/default/objects/Survey__c/fields/NumeroIdCliente__c.field-meta.xml
<CustomField>
    <fullName>NumeroIdCliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup a cuenta</description>
    <label>NumeroIdCliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>