force-app/zurich-base/main/default/objects/Survey__c/fields/NumeroMatriculaVehiculo__c.field-meta.xml
<CustomField>
    <fullName>NumeroMatriculaVehiculo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NumeroMatriculaVehiculo</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>