force-app/zurich-base/main/default/objects/Survey__c/fields/NumeroSiniestro__c.field-meta.xml
<CustomField>
    <fullName>NumeroSiniestro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LookUp a Siniestro</description>
    <label>Nº Siniestro</label>
    <referenceTo>Claim__c</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>