force-app/zurich-base/main/default/objects/Survey__c/fields/NUTELCON__c.field-meta.xml
<CustomField>
    <fullName>NUTELCON__c</fullName>
    <description>DDI de destino</description>
    <label>NUTELCON</label>
    <length>255</length>
    <type>Text</type>
</CustomField>