force-app/zurich-base/main/default/objects/Survey__c/fields/NUTELF1__c.field-meta.xml
<CustomField>
    <fullName>NUTELF1__c</fullName>
    <label>NUTELF1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>