force-app/zurich-base/main/default/objects/Survey__c/fields/Policy_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Policy_Renewal_Date__c</fullName>
    <description>OCS. Para Medallia. Fecha de renovación (vencimiento + 1)</description>
    <formula>CaseId__r.PolicyId__r.EndDate__c + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy_Renewal_Date</label>
    <type>Date</type>
</CustomField>