force-app/zurich-base/main/default/objects/Survey__c/fields/PolicyId__c.field-meta.xml
<CustomField>
    <fullName>PolicyId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>OCS. Póliza asociada a la encuesta</description>
    <label>Póliza</label>
    <referenceTo>Policy__c</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>