force-app/zurich-base/main/default/objects/Survey__c/fields/Premium_Currency__c.field-meta.xml
<CustomField>
    <fullName>Premium_Currency__c</fullName>
    <defaultValue>&apos;EUR&apos;</defaultValue>
    <description>OCS. Campo fijo EUR para Medallia</description>
    <label>Premium_Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>