force-app/zurich-base/main/default/objects/Survey__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <description>OCS. Campo utilizado en el envío de información a Medallia</description>
    <formula>CASE(PolicyId__r.ProductId__r.GroupDescription__c, 
&apos;ACCIDENTES&apos;,&apos;Accident &amp; Health&apos;,
&apos;OTROS&apos;,&apos;Other&apos;,
&apos;EMBARCACIONES&apos;,&apos;Property&apos;,
&apos;TRANSPORTES&apos;,&apos;Motor&apos;,
&apos;INMUEBLES&apos;,&apos;Property&apos;,
&apos;COMERCIOS&apos;,&apos;Property&apos;,
&apos;PATRIMONIALES&apos;,&apos;Property&apos;,
&apos;HOGAR&apos;,&apos;Property&apos;,
&apos;TECNICOS&apos;,&apos;Other&apos;,
&apos;RESP. CIVIL&apos;,&apos;Liability&apos;,
&apos;AUTOS&apos;,&apos;Motor&apos;,
&apos;SALUD&apos;,&apos;Accident &amp; Health&apos;,
&apos;FLOTAS&apos;,&apos;Other&apos;,
&apos;PROT. PAGOS&apos;,&apos;Other&apos;,
&apos;DECESOS&apos;,&apos;Other&apos;,
&apos;Other&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product_Type</label>
    <type>Text</type>
</CustomField>