force-app/zurich-base/main/default/objects/Survey__c/fields/QueueDescription__c.field-meta.xml
<CustomField>
    <fullName>QueueDescription__c</fullName>
    <formula>GenesysCloudQueue__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Queue_Description</label>
    <type>Text</type>
</CustomField>