force-app/zurich-base/main/default/objects/Survey__c/fields/ShortAnswersProcessed__c.field-meta.xml
<CustomField>
    <fullName>ShortAnswersProcessed__c</fullName>
    <description>OCS - Concatenar las respuestas en formato CSV. Se deben indicar todas incluidas las no respondidas o las respondidas como vacías en base al número total de preguntas en la encuesta. Formato: &lt;respuesta1&gt;;&lt;respuesta2&gt;;…; &lt;respuestaN&gt;</description>
    <label>Short Answers Processed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>