force-app/zurich-base/main/default/objects/Survey__c/fields/Solicitud__c.field-meta.xml
<CustomField>
    <fullName>Solicitud__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica que el registro actual corresponde a una solicitud de encuesta, y no a una encuesta con sus resutados</description>
    <label>Solicitud</label>
    <type>Checkbox</type>
</CustomField>