force-app/zurich-base/main/default/objects/Survey__c/fields/SURVEYCHANNEL__c.field-meta.xml
<CustomField>
    <fullName>SURVEYCHANNEL__c</fullName>
    <description>Si es encuesta tras la llamada IVR, sino es Email</description>
    <formula>IF( Solicitud__c = true,&quot;Email&quot;,&quot;IVR&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SURVEY_CHANNEL</label>
    <type>Text</type>
</CustomField>