force-app/zurich-base/main/default/objects/Survey__c/fields/SurveyFlowId__c.field-meta.xml
<CustomField>
    <fullName>SurveyFlowId__c</fullName>
    <description>OCS - Identificador del flujo de encuesta en Genesys</description>
    <label>Survey Flow Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>