force-app/zurich-base/main/default/objects/Survey__c/fields/TIPENT__c.field-meta.xml
<CustomField>
    <fullName>TIPENT__c</fullName>
    <label>TIPENT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>