force-app/zurich-base/main/default/objects/Survey__c/fields/TouchpointDate__c.field-meta.xml
<CustomField>
    <fullName>TouchpointDate__c</fullName>
    <formula>LPAD(TEXT(DAY(TODAY() + (1/24))), 2, &quot;0&quot;) + &quot;/&quot; + 
LPAD(TEXT(MONTH(TODAY() + (1/24))), 2, &quot;0&quot;) + &quot;/&quot; +
TEXT(YEAR(TODAY() + (1/24)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Touchpoint_Date</label>
    <type>Text</type>
</CustomField>