force-app/zurich-base/main/default/objects/Survey__c/fields/TSULTMOD__c.field-meta.xml
<CustomField>
    <fullName>TSULTMOD__c</fullName>
    <formula>LPAD(TEXT(DAY(DATEVALUE(CreatedDate + (1/24)))), 2, &quot;0&quot;) + &quot;/&quot; + 
LPAD(TEXT(MONTH(DATEVALUE(CreatedDate + (1/24)))), 2, &quot;0&quot;) + &quot;/&quot; + 
RIGHT(TEXT(YEAR(DATEVALUE(CreatedDate + (1/24)))),2) + &quot; &quot; + 
LPAD(TEXT(HOUR(TIMEVALUE(CreatedDate + (1/24)))), 2, &quot;0&quot;) + &quot;:&quot; + 
LPAD(TEXT(MINUTE(TIMEVALUE(CreatedDate + (1/24)))), 2, &quot;0&quot;) + &quot;:&quot; + 
LPAD(TEXT(SECOND(TIMEVALUE(CreatedDate + (1/24)))), 2, &quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TSULTMOD</label>
    <type>Text</type>
</CustomField>