force-app/zurich-base/main/default/objects/Survey__c/fields/UniqueID__c.field-meta.xml
<CustomField>
    <fullName>UniqueID__c</fullName>
    <description>Número de interacción o, si es una solicitud, de caso</description>
    <formula>IF(Solicitud__c=true, CaseId__r.CaseNumber ,  InteractionId__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique_ID</label>
    <type>Text</type>
</CustomField>