force-app/zurich-base/main/default/objects/Survey__c/fields/UnitName__c.field-meta.xml
<CustomField>
    <fullName>UnitName__c</fullName>
    <description>Tipificación N1 del caso</description>
    <formula>TEXT(CaseId__r.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit_Name</label>
    <type>Text</type>
</CustomField>