force-app/zurich-base/main/default/objects/Survey__c/fields/VALHORAS__c.field-meta.xml
<CustomField>
    <fullName>VALHORAS__c</fullName>
    <formula>LPAD(TEXT(HOUR(TIMEVALUE(CreatedDate + (1/24)))), 2, &quot;0&quot;) + &quot;:&quot; +
LPAD(TEXT(MINUTE(TIMEVALUE(CreatedDate + (1/24)))), 2, &quot;0&quot;) + &quot;:&quot; +
LPAD(TEXT(SECOND(TIMEVALUE(CreatedDate + (1/24)))), 2, &quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VALHORAS</label>
    <type>Text</type>
</CustomField>