force-app/zurich-base/main/default/objects/Survey__c/fields/VehicleLicensePlate__c.field-meta.xml
<CustomField>
    <fullName>VehicleLicensePlate__c</fullName>
    <description>Número de matrícula</description>
    <label>Vehicle License Plate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>